--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,26 +7,92 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:gravity="center"
+    android:orientation="vertical"
     tools:context="com.example.ehar.accelerometercs450.MainActivity">
 
-    <LinearLayout
+    <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:text="@string/accelerometer_values"
+        android:layout_gravity="center_horizontal"
+        android:textSize="@dimen/accel_title"
+        android:paddingBottom="@dimen/default_padding"/>
+
+    <LinearLayout
+        style="@style/default_layout">
+
         <TextView
-            android:layout_width="@dimen/accel_value_width"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/default_text_size"
-            android:paddingRight="@dimen/default_padding"
-            android:background="@color/lightGray"
+            style="@style/accel_view"
+            android:id="@+id/x_accel_view"
+            />
+
+        <TextView
+            style="@style/label"
+            android:text="@string/x"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        style="@style/default_layout">
+
+        <TextView
+            style="@style/accel_view"
+            android:id="@+id/y_accel_view"
+            />
+
+        <TextView
+            style="@style/label"
+            android:text="@string/y"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        style="@style/default_layout">
+
+        <TextView
+            style="@style/accel_view"
             android:id="@+id/z_accel_view"
             />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/default_text_size"
-            android:text="@string/z"
-            />
+            style="@style/label"
+            android:text="@string/z"/>
+
     </LinearLayout>
-</RelativeLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/geographical_values"
+        android:layout_gravity="center_horizontal"
+        android:textSize="@dimen/accel_title"
+        android:paddingBottom="@dimen/default_padding"/>
+
+    <LinearLayout
+        style="@style/default_layout">
+
+        <TextView
+            style="@style/accel_view"
+            android:id="@+id/latitude_view"/>
+
+        <TextView
+            style="@style/label"
+            android:text="@string/latitude"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        style="@style/default_layout">
+
+        <TextView
+            style="@style/accel_view"
+            android:id="@+id/longitude_view"/>
+
+        <TextView
+            style="@style/label"
+            android:text="@string/longitude"/>
+
+    </LinearLayout>
+
+</LinearLayout>
