--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="default_text_size">48sp</dimen>
     <dimen name="accel_value_width">300dp</dimen>
-    <dimen name="default_padding">20dp</dimen>
+    <dimen name="default_padding">10dp</dimen>
+    <dimen name="accel_title">30sp</dimen>
 </resources>
